Register > Terms of Service, and Privacy Policy - Spacing issues

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
@@ -61,6 +61,10 @@
 		}
 	} // close .signup-form
 
+	.register-privacy-info {
+		margin: 15px 0 0;
+	}
+
 } // close .register-page
 
 // Flex layout containers for registration sections
